fix: add white space pre-line for description

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -75,6 +75,7 @@
 
     &__content {
         color: color-assign(card-content-font-color);
+        white-space: pre-line;
     }
 
     &__footer {
